@@ -12,7 +12,18 @@
 * ignore the last enter key.
   it goes next sessions now, and results in first failure.
 
-## 5.9.0 (2026-05-09)
+## 5.9.0 (2026-08-02)
+
+- ensured `stage` server tp.home works.
+- removed "--sun-misc-unsafe-memory-access=warn" from `shadow-cljs.edn`.
+- removed "--sun-misc-unsafe-memory-access=allow" from `:jvm-opts`.
+- db-restore-orbstack.sh typing_ex typing_ex-2026-08-02.dump
+- antq-upgrade
+
+| :file       | :name                             | :current | :latest  |
+|-------------|-----------------------------------|----------|----------|
+| project.clj | com.github.seancorfield/next.jdbc | 1.3.1108 | 1.3.1118 |
+|             | org.postgresql/postgresql         | 42.7.11  | 42.7.13  |
 
 - antq-upgrade
 
@@ -22,17 +33,19 @@
 |             | org.clojure/clojure               | 1.12.4   | 1.12.5   |
 |             | org.postgresql/postgresql         | 42.7.10  | 42.7.11  |
 
+- display wrongly typed words.
+
 ## 5.8.4 (2026-05-08)
 
 - level up the threshold every week by 100pt.
 - stopped warning message displayed by giving following jvm-opts;
 
-```
+  ```
   :jvm-opts  ["--add-opens=java.base/java.nio=ALL-UNNAMED"
               "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED"
               "--enable-native-access=ALL-UNNAMED"
               "--sun-misc-unsafe-memory-access=allow"]
-```
+  ```
 
 ## 5.8.2 (2026-04-24)
 
