@@ -1,11 +1,11 @@
-(defproject typing-ex "5.9.0-SNAPSHOT"
+(defproject typing-ex "5.9.0"
   :description "typing exercises for literacy classes"
   :url "https://tp.melt.kyutech.ac.jp"
   :min-lein-version "2.0.0"
   :dependencies [[buddy/buddy-auth "3.0.323"]
                  [buddy/buddy-hashers "2.0.167"]
                  [clojure.java-time/clojure.java-time "1.4.3"]
-                 [com.github.seancorfield/next.jdbc "1.3.1108"]
+                 [com.github.seancorfield/next.jdbc "1.3.1118"]
                  [duct/core "0.8.1"]
                  [duct/module.ataraxy "0.3.0"]
                  [duct/module.logging "0.5.0"]
@@ -16,7 +16,7 @@
                  [http-kit/http-kit "2.8.1"]
                  [com.taoensso/carmine "3.5.0"]
                  [org.clojure/clojure "1.12.5"]
-                 [org.postgresql/postgresql "42.7.11"]
+                 [org.postgresql/postgresql "42.7.13"]
                  [org.clojure/tools.logging "1.3.1"]]
   :plugins [[duct/lein-duct "0.12.3"]]
   :main ^:skip-aot typing-ex.main
@@ -37,5 +37,5 @@
                                              [kerodon "0.9.1"]]}}
   :jvm-opts    ["--add-opens=java.base/java.nio=ALL-UNNAMED"
                 "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED"
-                "--enable-native-access=ALL-UNNAMED"
-                "--sun-misc-unsafe-memory-access=allow"])
+                "--enable-native-access=ALL-UNNAMED"]
+                )
